fix: hide overflow

--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     background-image: url('bg.png'); 
     background-size: 100% 95%; 
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 #stopwatchbox {
